remove CreateProblemRoute
